improved the adaptation of the website. it will look good even on smalller screen now. Still need to add logo, add a price page, add a review column, add a buisness email and lastly fix the domain or find a temporary domain until the new domain works.

--- a/app.css
+++ b/app.css
@@ -6,13 +6,15 @@ body, html{
     padding: 0;
     background-color:rgb(14, 33, 77);
     height: 100%;
+    flex-direction: column;
 }
 footer{
     background-color:rgb(0, 0, 0);
     color: white;
     bottom: 0;
-    position: absolute;
+    position: relative;
     width: 100%;
+    margin-top: 20px;
 }
 .footer_container{
     padding: 20px;
@@ -41,7 +43,7 @@ nav ul{
 }
 nav li{
     display: inline-block;
-    margin-left: 70px;
+    margin-left: 20px;
     padding-top: 32px;
     position: relative;
 }
@@ -70,13 +72,13 @@ nav a:hover::before{
     text-align: center;
     margin-bottom: 30px;
     width:100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
 }
 .swiper{
-    width: 80%;
-    height: fit-content;
+    width: 100%;
+    height: auto;
 }
 .picture_container img{
     width: 100%;
@@ -85,3 +87,8 @@ nav a:hover::before{
     background: white;
 }
 .swiper .swiper-button-prev, .swiper .swiper-button-next{color: white;}
+
+@media only screen and (max-width: 768px) {
+    .header_container {
+        width: 90%; /* Adjusted for smaller screens */
+    }}
